--- a/web.html
+++ b/web.html
@@ -99,7 +99,7 @@
 
   <div class="right-column">
     <div class="section">
-      <h2>CURICULUM VITAE</h2>
+      <h2 style= "text-align:center; color:chocolate; >CURICULUM VITAE</h2>
       <h2>Riwayat Pendidikan</h2>
       <p><strong>Institut Teknologi Sumatera</strong><br>S1 Sains Data<br>Jun 2023 - Sekarang</p>
     </div>
