--- a/web.html
+++ b/web.html
@@ -63,6 +63,49 @@
     display: flex;
     text-align: left;
   }
+  /* ... gaya CSS Anda yang lain ... */
+
+.hamburger-menu {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.hamburger-menu .bar {
+  width: 100%;
+  height: 3px;
+  background-color: black;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px; /* Sembunyikan sidebar di luar layar */
+  width: 250px;
+  height: 100%;
+  background-color: white;
+  transition: 0.3s;
+  padding: 20px;
+  z-index: 99;
+}
+
+.sidebar.active {
+  left: 0; /* Tampilkan sidebar saat aktif */
+}
+
+.sidebar a {
+  display: block;
+  padding: 10px 0;
+  text-decoration: none;
+  color: black;
+}
     </style>
 </head>
 <body>
@@ -99,7 +142,6 @@
 
   <div class="right-column">
     <div class="section">
-      <h2 style= "color:red;" >CURICULUM VITAE</h2>
       <h2>Riwayat Pendidikan</h2>
       <p><strong>Institut Teknologi Sumatera</strong><br>S1 Sains Data<br>Jun 2023 - Sekarang</p>
     </div>
@@ -168,6 +210,23 @@
           </ul>
        
         </div>
+          <div class="container">
+            <div class="hamburger-menu">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+            <div class="sidebar">
+              <a href="#">Tentang</a>
+              <a href="https://wa.me/6285142373305">Chat Saya</a>
+            </div>
+            <div class="left-column">
+              </div>
+            <div class="right-column">
+              </div>
+          </div>
+        
+          <script src="script.js"></script>
       </div>
     </div>
   </div>
